--- a/index11.html
+++ b/index11.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="container">
-    <img src="images/image.jpg" class="item" alt="babuh/>
-    <div class=" item2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mollis libero lacinia, dictum nulla quis, lobortis turpis.
+    <img src="images/image.jpg" class="item" alt="babuh"/>
+    <div class="item2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mollis libero lacinia,
+        dictum nulla quis, lobortis turpis.
     </div>
 </div>
-
 </body>
 </html>
