--- a/index9.html
+++ b/index9.html
@@ -8,7 +8,8 @@
 <body>
 <div class="relat">
     <img src="images/image.jpg" class="absolute" alt="bad"/>
-    <p class="blue">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mollis libero lacinia, dictum nulla quis,
+    <p class="blue">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mollis libero lacinia, dictum
+        nulla quis,
         lobortis turpis. Quisque auctor porta convallis. Proin vulputate placerat lectus et imperdiet. Donec pulvinar
         tempor posuere. Fusce nibh dolor, ornare vel egestas in, condimentum vel mi. Cum sociis natoque penatibus et
         magnis dis parturient montes, nascetur ridiculus mus. Etiam ac eleifend dui. Praesent malesuada sagittis odio
