fix styles link

--- a/index10.html
+++ b/index10.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link href="index10.css" rel="stylesheet">
+    <link href="styles/index10.css" rel="stylesheet">
     <title>Task 2.10</title>
 </head>
 <body>
